--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "ariful4082 <ariful4082@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   },
   "scripts": {
