--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.17.1"
   },
   "scripts": {
-    "start": "nodemon index"
+    "start": "nodemon index",
+    "production": "NODE_ENV=production nodemon index"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
