--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "multer": "^1.4.3"
   },
   "scripts": {
     "start": "nodemon index",
