--- a/package.json
+++ b/package.json
@@ -1,31 +1,25 @@
 {
-  "name": "nodeJs-Sumit",
+  "name": "chat-application",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "node.js Full-Stack  Real time chat application",
+  "main": "app.js",
   "repository": "git@github.com-ariful4966:ariful4966/nodeJS_Sumit.git",
   "author": "ariful4082 <ariful4082@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "NODE_ENV=development nodemon app.js",
+    "prod": "NODE_ENV=production node app.js"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
+    "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3"
-  },
-  "scripts": {
-    "start": "nodemon index",
-    "production": "NODE_ENV=production nodemon index"
-  },
-  "devDependencies": {
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.4.1"
   }
 }
